--- a/.prettierrc
+++ b/.prettierrc
@@ -2,8 +2,12 @@
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": true,
+  "useTabs": false,
   "singleQuote": true,
   "bracketSpacing": true,
-  "jsxBracketSameLine": true,
-  "bracketSameLine": false
+  "jsxBracketSameLine": false,
+  "bracketSameLine": false,
+  "importOrder": ["^components/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
